<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewPropietario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propietario"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matr_cula"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPropietario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:textSize="22sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewMatricula"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewEtiqueta"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
